<resources>
    <string name="app_name">FLASH</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--text in bottom navigation view-->
    <string name="txt_login_in">تسجيل الدخول</string>
    <string name="txt_new_account">حساب جديد</string>
    <string name="txt_connect_us">تواصل معنا</string>
    <string name="txt_terms_and_conditions">الشروط و الاجكام</string>

    <!--text in navigation view-->
    <string name="flash">فلاش</string>
    <string name="send_cash">تحويل رصيد</string>
    <string name="affiliate_program">برنامج الاحالة</string>
    <string name="financial_broker">الوسيط المالي</string>
    <string name="my_account">الملف الشخصي</string>
    <string name="security_Account">امن حساب</string>
    <string name="logout">تسجيل الخروج</string>

    <!--check_password-->
    <string name="check_password_They_should_be_the_same">يجب ان يكونوا متشابهين</string>
    <string name="check_password_Password_must_be_8_letters_and_numbers">كلمة المرور يجب ان تكون 8 حروف و ارقام</string>

    <!--terms_condition-->
    <string name="terms_condition_privacy_policy">سياسة الخصوصية</string>
    <string name="terms_condition_Usage_Agreement">اتفاقية الاستخدام</string>

    <!--login-->
    <string name="login_txt_btn_login">دخول</string>
    <string name="login_txt_tv_phone">رقم الحساب</string>
    <string name="login_txt_tv_password">كلمة المرور</string>
    <string name="login_txt_btn_recovery">استعادة</string>
    <string name="please_enter_pin_code">برجاء ادخال التاكيد الامني المكون من 4 ارقام</string>
    <string name="should_same">يجب ان يكونوا متشابهين</string>

    <string name="male">ذكر</string>
    <string name="female">انثي</string>

    <!--personal_data-->
    <string name="Personal_data">البيانات الشخصية</string>
    <string name="Account_details">بيانات الحساب</string>
    <string name="gender">الجنس</string>
    <string name="name">الاسم</string>
    <string name="date_create">تاريخ الانشاء</string>
    <string name="birthday">تاريخ الميلاد</string>
    <string name="city">المدينة</string>
    <string name="governorate">المحافظة</string>
    <string name="namber_phone">الجوال</string>
    <string name="Account_status">حالة الحساب</string>
    <string name="The_remaining_period">الفترة المتبقية</string>
    <string name="activate_the_account">تفعيل الحساب</string>

    <!--winner_data-->
    <string name="winner">الفائز</string>
    <string name="serial_namber">الرقم المسلسل</string>
    <string name="prize">الجائزة</string>
    <string name="date">التاريخ</string>
    <string name="state_prize">حالة الجائزة</string>
    <string name="proof">الاثبات</string>
    <string name="state_ok">الاثبات</string>
    <string name="state">قيد المعالجة</string>

    <string name="activite">مفعل</string>
    <string name="no_activite">غير مفعل</string>

    <string name="value_requerment">القيمة المطلوبة</string>
    <string name="type_of_pay">نوع بطاقة الدفع</string>
    <string name="confirm">تأكيد</string>
    <string name="try_your_luck">جرب حظك</string>

    <string name="password_current">كلمة المرور الحالية</string>
    <string name="pin_code_new">التأكيد الامني الجديد</string>
    <string name="pin_code_new_confirm">أعادة التأكيد الامني</string>
    <string name="password_new">كلمة المرور الجديد</string>
    <string name="password_new_confirm">اعادة كلمة المرور</string>
    <string name="should_enter_code">يجب ادخال كود</string>

    <!--activity_home-->
    <string name="profile_personly">الملف الشخصي</string>
    <string name="account_security">أمن الحساب</string>

    <string name="terms_and_condation">الشروط و الاحكام</string>

    <string name="please_wait">من فضلك انتظر...</string>
    <string name="no_internet_connection">لا يوجد إتصال بالإنترنت, برجاء المحاولة لاحقا.</string>
    <string name="error">حدث خطأ ما</string>
    <string name="log_out">هل تريد تسجيل الخروج ؟</string>
    <string name="please_enter_phone_password">من فضلك ادخل رقم الحساب و كلمة المرور</string>
</resources>