<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/bottom_nav_auth_login">

    <fragment
        android:id="@+id/bottom_nav_auth_login"
        android:name="com.alaaramadan.flashdemo.view.fragments.user_cycle.LoginFragment"
        android:label="@string/txt_login_in"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/bottom_nav_auth_contact_with_us"
        android:name="com.alaaramadan.flashdemo.view.fragments.user_cycle.ConnectUsFragment"
        android:label="@string/txt_connect_us"
        tools:layout="@layout/fragment_connect_us" />

    <fragment
        android:id="@+id/bottom_nav_auth_new_account"
        android:name="com.alaaramadan.flashdemo.view.fragments.user_cycle.NewAcountStepOneFragment"
        android:label="@string/txt_new_account"
        tools:layout="@layout/fragment_new_acount_step_two" />

    <fragment
        android:id="@+id/bottom_nav_auth_condition"
        android:name="com.alaaramadan.flashdemo.view.fragments.user_cycle.TermsConditionsFragment"
        android:label="@string/txt_terms_and_conditions"
        tools:layout="@layout/fragment_terms_conditions" />


</navigation>