<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:context=".view.fragments.home.NavigationViewFragment"
        android:orientation="vertical"
        android:background="@drawable/bk_nav_home"
        >

        <Button
            android:id="@+id/home_activity_btn_flash"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            style="@style/btn_nav_2"
            android:text="@string/flash"

            />
        <Button
            android:id="@+id/home_activity_btn_account_personal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            style="@style/btn_nav_2"
            android:text="@string/profile_personly"
            />
        <Button
            android:id="@+id/home_activity_btn_account_security"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            style="@style/btn_nav_2"
            android:text="@string/account_security"
            />

        <Button
            android:id="@+id/home_activity_btn_log_out"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            style="@style/btn_nav_2"
            android:text="@string/logout"
            android:background="@drawable/bk_btn_nav_view_red"
            />

    </LinearLayout>
</layout>