<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.fragments.user_cycle.LoginFragment"
            android:orientation="vertical"
            android:background="@color/colorFragment"

            >

            <LinearLayout
                style="@style/li_style"
                >
                <EditText
                    android:id="@+id/login_fragment_et_phone"
                    style="@style/et_style"
                    android:maxLength="11"

                    />
                <TextView
                    style="@style/tv_style"
                    android:text="@string/login_txt_tv_phone"
                    />
            </LinearLayout>
            <LinearLayout
              style="@style/li_style"
                >
                <EditText
                    android:id="@+id/login_fragment_et_password"
                    android:maxLength="30"
                    style="@style/et_style"
                    />
                <TextView
                    style="@style/tv_style"
                    android:text="@string/login_txt_tv_password"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/login_fragment_btn_login"
                style="@style/btn_style"
                android:text="@string/login_txt_btn_login"
                />
            <TextView
                android:id="@+id/login_fragment_tv_show_message"
               style="@style/txt_res"
                />
            <Button
                android:id="@+id/login_fragment_btn_recovery"
                style="@style/btn_style"
                android:text="@string/login_txt_btn_recovery"
                android:background="@drawable/shape_btn_reb"
                />


        </LinearLayout>

</layout>