<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.home.CheckPasswordFragment"
        android:background="@color/colorFragment"
        android:orientation="vertical"
        >
        <TextView
            style="@style/btn_style"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/account_security"
            android:background="@drawable/shape_btn_security"
            />

        <LinearLayout
            style="@style/li_style"
            android:layout_marginTop="@dimen/_10sdp"
            >
            <EditText
                android:id="@+id/check_password_fragment_et_password"
                style="@style/et_style"
                />
            <TextView
                android:text= "@string/password_current"
                style="@style/tv_style"
                />
        </LinearLayout>
        <Button
            android:id="@+id/check_password_fragment_btn_confirm"
            style="@style/btn_style"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/confirm"
            />
        <TextView
            android:id="@+id/check_password_fragment_tv_show_message"
            style="@style/txt_res"

            />


    </LinearLayout>
</layout>