<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.home.ActiviteAccountFragment"
        android:background="@color/colorFragment"
        android:orientation="vertical"

        >
        <LinearLayout
            android:layout_gravity="top"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bk_linear_layout"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            >
            <LinearLayout
                style="@style/li_style"
                >

                <TextView
                    android:id="@+id/activite_account_fragment_tv_required_value"
                    style="@style/et_style"
                    android:inputType="numberPassword"
                    android:maxLength="4"
                    android:password="true" />
                <TextView
                    android:text="@string/value_requerment"
                    style="@style/tv_style"
                    />
            </LinearLayout>
            <LinearLayout
                style="@style/li_style"
                >

                <TextView
                    android:id="@+id/activite_account_fragment_tv_type_payment"
                    style="@style/et_style" />
                <TextView
                    android:text="@string/type_of_pay"
                    style="@style/tv_style"
                    />
            </LinearLayout>
            <LinearLayout
                style="@style/li_style"
                >

                <EditText
                    android:id="@+id/activite_account_fragment_et_serail_namber"
                    style="@style/et_style"
                    android:inputType="number"
                    android:maxLength="80"
                     />
                <TextView
                    android:text="@string/serial_namber"
                    style="@style/tv_style"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/activite_account_fragment_btn_confirm"
                style="@style/btn_style"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/_10sdp"
                />




        </LinearLayout>


    </LinearLayout>
</layout>


