<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.user_cycle.TermsConditionsFragment"
        android:orientation="vertical"
        android:background="@color/colorFragment"
        >
        <TextView
            style="@style/btn_style"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/txt_terms_and_conditions"
            android:background="@drawable/shape_btn_security"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/terms_condition_fragment_btn_privacy_policy"
                android:layout_width="@dimen/_130sdp"

                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bk_log_out"
                android:gravity="center"

                android:text="@string/terms_condition_privacy_policy"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/terms_condition_fragment_btn_usage_agreement"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/terms_condition_fragment_btn_usage_agreement"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bk_log_in"
                android:gravity="center"
                android:text="@string/terms_condition_Usage_Agreement"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/terms_condition_fragment_rv_privacy_policy"
           android:layout_marginTop="@dimen/_10sdp"
           android:layout_marginBottom="@dimen/_20sdp"
           android:layout_marginEnd="@dimen/_15sdp"
           android:layout_marginStart="@dimen/_15sdp"
           android:background="@drawable/bk_rv_terms"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:visibility="gone"
           />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/terms_condition_fragment_rv_usage_agreement"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:background="@drawable/bk_rv_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            />


    </LinearLayout>
</layout>